--- a/.travis.yml
+++ b/.travis.yml
@@ -42,3 +42,15 @@ deploy:
     tags: false
     branch: master
     condition: $TRAVIS_COMMIT_MESSAGE = "build report"
+    
+deploy:
+  provider: releases
+  tag_name: $TRAVIS_TAG
+  api_key:
+    secure: $GITHUB_TOKEN
+  file: 'reproducible_report.pdf'
+  skip_cleanup: true
+  on:
+    tags: false
+    branch: master
+    condition: $TRAVIS_EVENT_TYPE = "cron"
