--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_deploy:
   - echo "$TRAVIS_TAG" "$TRAVIS_COMMIT"
   - git config --local user.name "I'm the CD Bot"
   - git config --local user.email "nobody@nobody.com"
-  - if [ $TRAVIS_EVENT_TYPE == "cron" ]; then $TRAVIS_TAG=$(date +"%m_%d_%Y"); fi
+  - if [ $TRAVIS_EVENT_TYPE == "cron" ]; then $TRAVIS_TAG="daily_cron_job"; fi
   - git tag "$TRAVIS_TAG" "$TRAVIS_COMMIT"
   - echo "$TRAVIS_TAG" "$TRAVIS_COMMIT"
   
@@ -50,6 +50,7 @@ deploy:
     secure: $GITHUB_TOKEN
   file: 'reproducible_report.pdf'
   skip_cleanup: true
+  overwrite: true
   on:
     tags: false
     branch: master
